# TinyLM

./: .gitignore  README.md  continue_run.sh  main.py  pyproject.toml  submit.sh  submit_old.sh  submit_refined.sh
configs/: data.yaml  train.yaml  train_elite.yaml  train_elite_resume.yaml  train_tinystories.yaml  train_tinystories_resume.yaml  wandb.yaml
src/: data.py  data_refined.py  gradio_app.py  main.py  modal_app.py  model.py  model_refined.py  train.py  train_refined.py  vllm_app.py
src/refined_pipeline/: main_refined.py  model_refined.py  train_refined.py
