[project]
name = "tinylm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "fastapi>=0.115.6",
    "gradio>=5.13.1",
    "huggingface>=0.0.1",
    "matplotlib>=3.10.8",
    "modal>=0.73.80",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "tiktoken>=0.12.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
